🐛 fix(accordions): accordion content overflows even when accordion is closed.

--- a/assets/scss/shared-ui/_accordions.scss
+++ b/assets/scss/shared-ui/_accordions.scss
@@ -538,6 +538,8 @@
 					position: absolute;
 					z-index: -1;
 					background-color: $accordion--content-bg-color;
+					height: 0;
+					overflow: hidden;
 
 					th, td {
 						padding: 0 $sui-gutter-md $sui-gutter-md;
